// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles unknown languages 1`] = `
<div
  className="project-card-languages"
>
  <Tooltip
    overlay={
      <span>
        <span>
          cpp
          <br />
        </span>
        <span>
          Java
          <br />
        </span>
      </span>
    }
  >
    <span>
      cpp, Java
    </span>
  </Tooltip>
</div>
`;

exports[`handles unknown languages 2`] = `
<div
  className="project-card-languages"
>
  <Tooltip
    overlay={
      <span>
        <span>
          unknown
          <br />
        </span>
        <span>
          Java
          <br />
        </span>
      </span>
    }
  >
    <span>
      unknown, Java
    </span>
  </Tooltip>
</div>
`;

exports[`renders 1`] = `
<div
  className="project-card-languages"
>
  <Tooltip
    overlay={
      <span>
        <span>
          Java
          <br />
        </span>
        <span>
          JavaScript
          <br />
        </span>
      </span>
    }
  >
    <span>
      Java, JavaScript
    </span>
  </Tooltip>
</div>
`;

exports[`sorts languages 1`] = `
<div
  className="project-card-languages"
>
  <Tooltip
    overlay={
      <span>
        <span>
          JavaScript
          <br />
        </span>
        <span>
          Java
          <br />
        </span>
      </span>
    }
  >
    <span>
      JavaScript, Java
    </span>
  </Tooltip>
</div>
`;
